--- a/default.html
+++ b/default.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calvin Ssendawula - Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/c4254e24a8.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"> <!-- Fixed -->
 </head>
+
 <body>
 <div id="header">
     <div class="container">
@@ -34,7 +35,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="images/calvin.png">
+                <img src="images/calvin.jpg" alt="Calvin Ssendawula">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
