--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="header">
     <div class="container">
         <nav>
-            <h1 class="logo">Calvin.</h1>
+            <h1 class="logo">Portfolio.</h1>
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About Me</a></li>
@@ -35,7 +35,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="calvin.jpg" alt="Calvin Ssendawula">
+                <img src="images/calvin.jpg" alt="Calvin Ssendawula">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
