adding cool text for about, fixing style and image background fill

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <i class="fas fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
-            <p>Software Engineer | AI Enthusiast</p>
             <h1>Hi, I'm <span>Calvin Ssendawula</span></h1>
+            <h2><span id="typing-text"></span></h2>
         </div>
     </div>
 </div>
@@ -107,6 +107,52 @@
     function openmenu(){ document.getElementById("sidemenu").style.right = "0"; }
     function closemenu(){ document.getElementById("sidemenu").style.right = "-200px"; }
 </script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const textElement = document.getElementById("typing-text");
+        const words = [
+            "Full Stack Developer",
+            "AI Enthusiast",
+            "Open-Source Contributor",
+            "Software Engineer",
+            "Car Enthusiast",
+            "I love swimming",
+            "Watch Enthusiast"
+        ];
+
+        let wordIndex = 0;
+        let letterIndex = 0;
+        let isDeleting = false;
+
+        function typeEffect() {
+            let currentWord = words[wordIndex];
+            if (isDeleting) {
+                textElement.innerHTML = currentWord.substring(0, letterIndex - 1);
+                letterIndex--;
+            } else {
+                textElement.innerHTML = currentWord.substring(0, letterIndex + 1);
+                letterIndex++;
+            }
+
+            let typingSpeed = isDeleting ? 50 : 100;
+
+            if (!isDeleting && letterIndex === currentWord.length) {
+                typingSpeed = 1000; // Pause before deleting
+                isDeleting = true;
+            } else if (isDeleting && letterIndex === 0) {
+                isDeleting = false;
+                wordIndex = (wordIndex + 1) % words.length;
+                typingSpeed = 500; // Pause before typing the next word
+            }
+
+            setTimeout(typeEffect, typingSpeed);
+        }
+
+        typeEffect();
+    });
+</script>
+
 
 </body>
 </html>
