resetting and adding about me info

--- a/index.html
+++ b/index.html
@@ -39,7 +39,30 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p>I am a Computer Science student at Adams State University, graduating in December 2025. I started coding in high school, beginning with HTML, and grew a passion for software engineering. I have experience in full-stack development and AI projects.</p>
+                <p><strong>Thank you for checking out my Portfolio</strong></p>
+
+                <p>
+                    Hi, I am a current student at <strong>Adams State University</strong>, studying Computer Science, graduating in <strong>December 2025</strong>.
+                </p>
+
+                <p>
+                    I discovered my passion for coding during my junior year of high school when I took a basic HTML class.
+                    The ability to bring ideas to life through code instantly captivated me. However, I wanted to go beyond the fundamentals
+                    and deepen my understanding of software development. That drive led me to pursue a degree in Computer Science, where I
+                    continue to refine my skills and grow as an engineer. I am deeply passionate about programming and constantly strive to
+                    become a better developer.
+                </p>
+
+                <p>
+                    Currently, I am working on a couple of personal full-stack projects while juggling school and preparing for entry into the job market soon.
+                </p>
+
+                <p><strong>Summer Plans:</strong> Working as an intern.</p>
+
+                <!-- Connect Button -->
+                <div class="connect-button">
+                    <a href="https://www.linkedin.com/in/calvin-ssendawula-7874b0236/" target="_blank">Let's Connect</a>
+                </div>
             </div>
         </div>
     </div>
