added identifier under eperiences

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 <div id="experience">
     <div class="container">
         <h1 class="sub-title">Experience</h1>
+        <p class="experience-subtext">Select to view description</p>
         <div class="experience-grid">
 
             <!-- Amazon -->
