added styling for lets connect button

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                 <!-- Connect Button -->
                 <div class="connect-button">
-                    <a href="https://www.linkedin.com/in/calvin-ssendawula-7874b0236/" target="_blank">Let's Connect</a>
+                    <a href="https://www.linkedin.com/in/calvin-ssendawula-7874b0236/" target="_blank" class="button">Let's Connect</a>
                 </div>
             </div>
         </div>
