portfolio fix header

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#projects">Projects</a></li>
                 <i class="fas fa-times" onclick="closemenu()"></i>
             </ul>
-            <i class="fas fa-bars" onclick="openmenu()"></i>
+            <i class="fas fa-bars menu-toggle" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
             <h1>Hi, I'm <span>Calvin Ssendawula</span></h1>
@@ -71,7 +71,7 @@
 <div id="experience">
     <div class="container">
         <h1 class="sub-title">Experience</h1>
-        <p class="experience-subtext">Select to view description</p>
+        <p class="experience-subtext">*Select to view description*</p>
         <div class="experience-grid">
 
             <!-- Amazon -->
