fixing UI for projects and adding skills filter

--- a/index.html
+++ b/index.html
@@ -168,20 +168,44 @@
     </div>
 </div>
 
-<!-- Projects -->
+<!-- Projects Section -->
 <div id="projects">
     <div class="container">
         <h1 class="sub-title">Projects</h1>
+        <p class="projects-subtext">*select to view the code/documentation*</p>
+        <p class="projects-subtext">*these are some of my impactful projects in my GitHub; there are more!*</p>
+
+        <!-- Skills Filter (if needed) -->
+        <div class="project-filters">
+            <button class="filter-btn">Java</button>
+            <button class="filter-btn">Python</button>
+            <button class="filter-btn">AI/ML</button>
+            <button class="filter-btn">React</button>
+            <button class="filter-btn">HTML/CSS</button>
+        </div>
+
         <div class="projects-container">
+            <!-- Secure Data Transmission Project -->
             <div class="project-card">
-                <h2>Secure Data Transmission</h2>
+                <h2 class="project-title">Secure Data Transmission</h2>
+                <div class="project-tags">
+                    <span class="tag">Python</span>
+                    <span class="tag">ML</span>
+                </div>
                 <p>Implemented secure communication for remote ML training.</p>
-                <a href="https://github.com/calvin1011/SECURE-DATA-TRANSMISSION" target="_blank">View Project</a>
+                <a href="https://github.com/calvin1011/SECURE-DATA-TRANSMISSION" target="_blank" class="project-link">
+                    View Project
+                </a>
             </div>
         </div>
-        <a href="https://github.com/calvin1011?tab=repositories" class="btn">View All Projects</a>
+
+        <!-- View All Projects Button -->
+        <div class="projects-footer">
+            <a href="https://github.com/calvin1011?tab=repositories" class="view-all-button">View All Projects</a>
+        </div>
     </div>
 </div>
+
 
 <script src="script.js"></script>
 
