--- a/index.html
+++ b/index.html
@@ -199,6 +199,24 @@
             </div>
         </div>
 
+        <!-- Kobby Watch App Project -->
+        <div class="project-card">
+            <h2 class="project-title">Kobby Watch App</h2>
+            <p>AI-powered watchOS app for remembering names during networking.</p>
+
+            <!-- Skill Tags -->
+            <div class="project-tags">
+                <span class="tag">Swift</span>
+                <span class="tag">OpenAI</span>
+                <span class="tag">Whisper</span>
+                <span class="tag">GCP</span>
+                <span class="tag">CoreML</span>
+            </div>
+
+            <!-- Clickable Project Link -->
+            <a href="https://devpost.com/software/kobby" class="project-link" target="_blank">View Project</a>
+        </div>
+
         <!-- View All Projects Button -->
         <div class="projects-footer">
             <a href="https://github.com/calvin1011?tab=repositories" class="view-all-button">View All Projects</a>
