updating about me

--- a/index.html
+++ b/index.html
@@ -47,10 +47,13 @@
 
                 <p>
                     I discovered my passion for coding during my junior year of high school when I took a basic HTML class.
-                    The ability to bring ideas to life through code instantly captivated me. However, I wanted to go beyond the fundamentals
-                    and deepen my understanding of software development. That drive led me to pursue a degree in Computer Science, where I
-                    continue to refine my skills and grow as an engineer. I am deeply passionate about programming and constantly strive to
-                    become a better developer.
+                    The ability to bring ideas to life through code instantly captivated me. Building an application is one thing,
+                    but making it scalable and reliable is what truly matters. I love creating applications and seeing them evolve
+                    into products supporting customer needs. But I don't stop there, I think about security too! We live in a world
+                    where technology is advancing rapidly, and with that comes security challenges. As a developer, I ask myself:
+                    How can I build applications that scale and protect the people using them? I want users to feel confident and
+                    secure while interacting with the products I create. Last but not least, I'm passionate about cloud, AI and the
+                    beauty of continuous research.
 
                     During my free time, I love to play instruments like the piano, make music tracks and read books.
                 </p>
@@ -198,7 +201,7 @@
                 </a>
             </div>
 
-        <!-- Kobby Watch App Project -->
+            <!-- Kobby Watch App Project -->
             <div class="project-card">
                 <h2 class="project-title">Kobby Watch App</h2>
                 <p>AI-powered watchOS app for remembering names during networking.</p>
