--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
 <div id="header">
+    <div id="bubble-container"></div>
     <div class="container">
         <nav>
             <h1 class="logo">Portfolio.</h1>
