bug on kobby project

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 </a>
             </div>
 
-            !-- Kobby Watch App Project -->
+            <!-- Kobby Watch App Project -->
             <div class="project-card">
                 <h2 class="project-title">Kobby Watch App</h2>
                 <p>AI-powered watchOS app for remembering names during networking.</p>
