adding grup lnch

--- a/index.html
+++ b/index.html
@@ -209,6 +209,22 @@
                 <!-- Clickable Project Link -->
                 <a href="https://devpost.com/software/kobby" class="project-link" target="_blank">View Project</a>
             </div>
+
+            <div class="project-card">
+                <h2 class="project-title">Grup Lnch (In progress)</h2>
+                <div class="project-tags">
+                    <span class="tag">React</span>
+                    <span class="tag">Jest</span>
+                    <span class="tag">Typescript</span>
+                    <span class="tag">Firebase</span>
+                    <span class="tag">Javascript</span>
+                </div>
+                <p>An AI-powered food app that helps users filter restaurants based on preferences, dietary restrictions,
+                    and cravings. Users can swipe to match with restaurants effortlessly.</p>
+                <a href="https://github.com/GrupLnch/grupytinder" target="_blank" class="project-link">
+                    View Project
+                </a>
+            </div>
         </div>
 
         <div class="projects-footer">
