adding new project AQI

--- a/index.html
+++ b/index.html
@@ -194,6 +194,21 @@
                 </a>
             </div>
 
+            <div class="project-card">
+                <h2 class="project-title">AQI Notifier (Air Quality Alert App)</h2>
+                <div class="project-tags">
+                    <span class="tag">Python</span>
+                    <span class="tag">Flask</span>
+                    <span class="tag">OpenWeather API</span>
+                    <span class="tag">Twilio</span>
+                    <span class="tag">React</span>
+                </div>
+                <p>AQI Notifier is a real-time air quality monitoring app that sends users alerts when air pollution levels exceed safe limits.</p>
+                <a href="https://devpost.com/software/aqi-notifier" target="_blank" class="project-link">
+                    View Project
+                </a>
+            </div>
+
             <!-- Kobby Watch App Project -->
             <div class="project-card">
                 <h2 class="project-title">Kobby Watch App</h2>
