editing Kobby app and adding resume to portfolio

--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
                 <div class="connect-button">
                     <a href="https://www.linkedin.com/in/calvin-ssendawula-7874b0236/" target="_blank" class="button">Let's Connect</a>
                 </div>
+
+                <!-- Résumé Download -->
+                <div class="resume-download" style="margin-top: 20px;">
+                    <a href="documents/Calvin Ssendawula- Resume.pdf" class="button" download target="_blank">
+                        📄 Download Résumé
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -211,7 +218,7 @@
 
             <!-- Kobby Watch App Project -->
             <div class="project-card">
-                <h2 class="project-title">Kobby Watch App</h2>
+                <h2 class="project-title">Kobby AI Watch App</h2>
                 <div class="project-tags">
                     <span class="tag">Swift</span>
                     <span class="tag">OpenAI</span>
@@ -223,6 +230,7 @@
 
                 <!-- Clickable Project Link -->
                 <a href="https://devpost.com/software/kobby" class="project-link" target="_blank">View Project</a>
+                <a href="https://apps.apple.com/us/app/kobby-ai/id6670794222" class="project-link" target="_blank">Download on App Store</a>
             </div>
 
             <div class="project-card">
