--- a/index.html
+++ b/index.html
@@ -234,6 +234,25 @@
             </div>
 
             <div class="project-card">
+                <h2 class="project-title">AI Career Coach</h2>
+                <p>Mock interview tool using OpenAI + Azure to generate questions and evaluate your answers with real-time feedback.</p>
+
+                <!-- Skill Tags -->
+                <div class="project-tags">
+                    <span class="tag">Azure</span>
+                    <span class="tag">OpenAI</span>
+                    <span class="tag">Node.js</span>
+                    <span class="tag">GitHub Copilot</span>
+                    <span class="tag">Azure Functions</span>
+                </div>
+
+                <!-- Project Link -->
+                <a href="https://github.com/calvin1011/ai-career-coach" target="_blank" class="project-link">
+                    View Project
+                </a>
+            </div>
+
+            <div class="project-card">
                 <h2 class="project-title">Grup Lnch (In progress)</h2>
                 <div class="project-tags">
                     <span class="tag">React</span>
