added new project and updated skills

--- a/index.html
+++ b/index.html
@@ -181,11 +181,24 @@
         <p class="projects-subtext">*these are some of my impactful projects in my GitHub; there are more!*</p>
 
         <div class="project-filters">
-            <button class="filter-btn">Java</button>
-            <button class="filter-btn">Python</button>
             <button class="filter-btn">AI/ML</button>
-            <button class="filter-btn">React</button>
+            <button class="filter-btn">Azure</button>
+            <button class="filter-btn">CoreML</button>
+            <button class="filter-btn">Firebase</button>
+            <button class="filter-btn">GitHub Copilot</button>
             <button class="filter-btn">HTML/CSS</button>
+            <button class="filter-btn">Java</button>
+            <button class="filter-btn">JDBC</button>
+            <button class="filter-btn">Javascript</button>
+            <button class="filter-btn">Node.js</button>
+            <button class="filter-btn">ODBC</button>
+            <button class="filter-btn">OpenAI</button>
+            <button class="filter-btn">PostgreSQL</button>
+            <button class="filter-btn">Python</button>
+            <button class="filter-btn">React</button>
+            <button class="filter-btn">Swift</button>
+            <button class="filter-btn">Swing</button>
+            <button class="filter-btn">Typescript</button>
         </div>
 
         <div class="projects-container">
@@ -247,6 +260,25 @@
 
                 <!-- Project Link -->
                 <a href="https://github.com/calvin1011/ai-career-coach" target="_blank" class="project-link">
+                    View Project
+                </a>
+            </div>
+
+            <div class="project-card">
+                <h2 class="project-title">Airport Management System</h2>
+                <div class="project-tags">
+                    <span class="tag">Python</span>
+                    <span class="tag">Flask</span>
+                    <span class="tag">Java</span>
+                    <span class="tag">JDBC</span>
+                    <span class="tag">PostgreSQL</span>
+                    <span class="tag">Swing</span>
+                    <span class="tag">ODBC</span>
+                </div>
+                <p>A full-stack database management system built for handling airport operations.
+                    The web portal (Flask + ODBC) allows managers to manage employees, airplanes, and test data, while the desktop app (Java + JDBC)
+                    enables technicians to securely log in and record airworthiness tests.</p>
+                <a href="https://github.com/calvin1011/airportDB" target="_blank" class="project-link">
                     View Project
                 </a>
             </div>
