--- a/index.html
+++ b/index.html
@@ -183,21 +183,13 @@
         <div class="project-filters">
             <button class="filter-btn">AI/ML</button>
             <button class="filter-btn">Azure</button>
-            <button class="filter-btn">Firebase</button>
             <button class="filter-btn">GitHub Copilot</button>
             <button class="filter-btn">HTML/CSS</button>
             <button class="filter-btn">Java</button>
-            <button class="filter-btn">JDBC</button>
-            <button class="filter-btn">Javascript</button>
-            <button class="filter-btn">Node.js</button>
-            <button class="filter-btn">ODBC</button>
-            <button class="filter-btn">OpenAI</button>
+            <button class="filter-btn">Javascript</button>>
             <button class="filter-btn">PostgreSQL</button>
             <button class="filter-btn">Python</button>
             <button class="filter-btn">React</button>
-            <button class="filter-btn">Swift</button>
-            <button class="filter-btn">Swing</button>
-            <button class="filter-btn">Typescript</button>
         </div>
 
         <div class="projects-container">
