--- a/index.html
+++ b/index.html
@@ -174,39 +174,42 @@
 </div>
 
 <!-- Projects Section -->
-<div id="projects" class="section">
-    <div class="container">
-        <h1 class="sub-title">Projects</h1>
-        <p class="projects-subtext">*select to view the code/documentation*</p>
-        <p class="projects-subtext">*these are some of my impactful projects in my GitHub; there are more!*</p>
+<section id="projects" class="section">
+    <h1 class="sub-title">Projects</h1>
+    <p class="projects-subtext">*select to view the code/documentation*</p>
+    <p class="projects-subtext">*these are some of my impactful projects in my GitHub; there are more!*</p>
 
-        <div class="project-filters">
-            <button class="filter-btn">AI/ML</button>
-            <button class="filter-btn">Azure</button>
-            <button class="filter-btn">GitHub Copilot</button>
-            <button class="filter-btn">HTML/CSS</button>
-            <button class="filter-btn">Java</button>
-            <button class="filter-btn">Javascript</button>>
-            <button class="filter-btn">PostgreSQL</button>
-            <button class="filter-btn">Python</button>
-            <button class="filter-btn">React</button>
-        </div>
+    <div class="project-filters">
+        <button class="filter-btn active" data-skill="all">All</button>
+        <button class="filter-btn" data-skill="ai">AI/ML</button>
+        <button class="filter-btn" data-skill="python">Python</button>
+        <button class="filter-btn" data-skill="react">React</button>
+        <button class="filter-btn" data-skill="swift">Swift</button>
+        <button class="filter-btn" data-skill="azure">Azure</button>
+        <button class="filter-btn" data-skill="javascript">JavaScript</button>
+        <button class="filter-btn" data-skill="java">Java</button>
+        <button class="filter-btn" data-skill="postgresql">PostgreSQL</button>
+        <button class="filter-btn" data-skill="typescript">TypeScript</button>
+        <button class="filter-btn" data-skill="html">HTML/CSS</button> </div>
+
+    <div class="projects-carousel-container">
+        <div class="carousel-arrow carousel-prev">&lt;</div>
 
         <div class="projects-container">
-            <div class="project-card">
-                <h2 class="project-title">Secure Data Transmission</h2>
+
+            <div class="project-card" data-tags="python ai">
+                <h3 class="project-title">Secure Data Transmission</h3>
                 <div class="project-tags">
                     <span class="tag">Python</span>
                     <span class="tag">ML</span>
                 </div>
-                <p>Implemented secure communication for remote ML training.</p>
+                <p class="project-description">Implemented secure communication for remote ML training.</p>
                 <a href="https://github.com/calvin1011/SECURE-DATA-TRANSMISSION" target="_blank" class="project-link">
                     View Project
                 </a>
             </div>
 
-            <div class="project-card">
-                <h2 class="project-title">AQI Notifier (Air Quality Alert App)</h2>
+            <div class="project-card" data-tags="python react html"> <h3 class="project-title">AQI Notifier (Air Quality Alert App)</h3>
                 <div class="project-tags">
                     <span class="tag">Python</span>
                     <span class="tag">Flask</span>
@@ -214,15 +217,13 @@
                     <span class="tag">Twilio</span>
                     <span class="tag">React</span>
                 </div>
-                <p>AQI Notifier is a real-time air quality monitoring app that sends users alerts when air pollution levels exceed safe limits.</p>
+                <p class="project-description">AQI Notifier is a real-time air quality monitoring app that sends users alerts when air pollution levels exceed safe limits.</p>
                 <a href="https://devpost.com/software/aqi-notifier" target="_blank" class="project-link">
                     View Project
                 </a>
             </div>
 
-            <!-- Kobby Watch App Project -->
-            <div class="project-card">
-                <h2 class="project-title">Kobby AI Watch App</h2>
+            <div class="project-card" data-tags="swift ai"> <h3 class="project-title">Kobby AI Watch App</h3>
                 <div class="project-tags">
                     <span class="tag">Swift</span>
                     <span class="tag">OpenAI</span>
@@ -230,16 +231,12 @@
                     <span class="tag">GCP</span>
                     <span class="tag">CoreML</span>
                 </div>
-                <p>AI-powered watchOS app for remembering names during networking.</p>
-
-                <!-- Clickable Project Link -->
+                <p class="project-description">AI-powered watchOS app for remembering names during networking.</p>
                 <a href="https://devpost.com/software/kobby" class="project-link" target="_blank">View Project</a>
                 <a href="https://apps.apple.com/us/app/kobby-ai/id6670794222" class="project-link" target="_blank">Download on App Store</a>
             </div>
 
-            <div class="project-card">
-                <h2 class="project-title">AI Career Coach</h2>
-                <!-- Skill Tags -->
+            <div class="project-card" data-tags="azure ai javascript copilot"> <h3 class="project-title">AI Career Coach</h3>
                 <div class="project-tags">
                     <span class="tag">Azure</span>
                     <span class="tag">OpenAI</span>
@@ -247,16 +244,13 @@
                     <span class="tag">GitHub Copilot</span>
                     <span class="tag">Azure Functions</span>
                 </div>
-                <p>Mock interview tool using OpenAI + Azure to generate questions and evaluate your answers with real-time feedback.</p>
-
-                <!-- Project Link -->
+                <p class="project-description">Mock interview tool using OpenAI + Azure to generate questions and evaluate your answers with real-time feedback.</p>
                 <a href="https://github.com/calvin1011/ai-career-coach" target="_blank" class="project-link">
                     View Project
                 </a>
             </div>
 
-            <div class="project-card">
-                <h2 class="project-title">Airport Management System</h2>
+            <div class="project-card" data-tags="python java postgresql html"> <h3 class="project-title">Airport Management System</h3>
                 <div class="project-tags">
                     <span class="tag">Python</span>
                     <span class="tag">Flask</span>
@@ -266,16 +260,13 @@
                     <span class="tag">Swing</span>
                     <span class="tag">ODBC</span>
                 </div>
-                <p>A full-stack database management system built for handling airport operations.
-                    The web portal (Flask + ODBC) allows managers to manage employees, airplanes, and test data, while the desktop app (Java + JDBC)
-                    enables technicians to securely log in and record airworthiness tests.</p>
+                <p class="project-description">A full-stack database management system built for handling airport operations. The web portal (Flask + ODBC) allows managers to manage employees, airplanes, and test data, while the desktop app (Java + JDBC) enables technicians to securely log in and record airworthiness tests.</p>
                 <a href="https://github.com/calvin1011/airportDB" target="_blank" class="project-link">
                     View Project
                 </a>
             </div>
 
-            <div class="project-card">
-                <h2 class="project-title">Grup Lnch (In progress)</h2>
+            <div class="project-card" data-tags="react typescript javascript html"> <h3 class="project-title">Grup Lnch (In progress)</h3>
                 <div class="project-tags">
                     <span class="tag">React</span>
                     <span class="tag">Jest</span>
@@ -283,19 +274,16 @@
                     <span class="tag">Firebase</span>
                     <span class="tag">Javascript</span>
                 </div>
-                <p>An AI-powered food app that helps users filter restaurants based on preferences, dietary restrictions,
-                    and cravings. Users can swipe to match with restaurants effortlessly.</p>
+                <p class="project-description">An AI-powered food app that helps users filter restaurants based on preferences, dietary restrictions, and cravings. Users can swipe to match with restaurants effortlessly.</p>
                 <a href="https://github.com/GrupLnch/grupytinder" target="_blank" class="project-link">
                     View Project
                 </a>
             </div>
-        </div>
 
-        <div class="projects-footer">
-            <a href="https://github.com/calvin1011?tab=repositories" class="view-all-button">View All Projects</a>
-        </div>
-    </div>
-</div>
+        </div> <div class="carousel-arrow carousel-next">&gt;</div>
+    </div> <div class="projects-footer">
+    <a href="https://github.com/calvin1011?tab=repositories" target="_blank" class="view-all-button">View All Projects</a> </div>
+</section>
 
 <!-- Overlay for background blur effect -->
 <div id="overlay" onclick="closeAllExperience()"></div>
