adding effects for main page

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
 <!-- Hero Section -->
 <div id="header" class="section">
+    <div id="hero-background"></div>
+
     <div class="container">
         <div class="header-text">
             <h1>Hi, I'm <span>Calvin Ssendawula</span></h1>
