page centered and modifying welcome text

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
     <div class="container">
         <div class="header-text">
-            <h1>Hi, I'm <span>Calvin Ssendawula</span></h1>
+            <p class="intro-greeting">Hi, My Name is</p>
+            <h1>Calvin Ssendawula.</h1>
             <h2><span id="typing-text"></span></h2>
         </div>
     </div>
