fixing intro text alignment

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="header-text">
             <p class="intro-greeting">Hi, My Name is</p>
             <h1>Calvin Ssendawula.</h1>
-            <h2>I'm <span id="typing-text"></span></h2>
+            <h2><span id="typing-text"></span></h2>
         </div>
     </div>
 </div>
