editing Project description

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <span class="tag">Python</span>
                     <span class="tag">ML</span>
                 </div>
-                <p class="project-description">Implemented secure communication for remote ML training.</p>
+                <p class="project-description">Securing data transmission between a client and server during remote model training.</p>
                 <a href="https://github.com/calvin1011/SECURE-DATA-TRANSMISSION" target="_blank" class="project-link">
                     View Project
                 </a>
