adding project update feature in the about section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
                     Currently, I am working on personal full-stack projects while juggling school and prepping for entry into the job market.
                 </p>
 
+                <p class="recent-project">
+                    My most recent project, completed on:
+                    <strong id="project-name" class="highlight-project">Loading...</strong> –
+                    <span id="project-days-ago">Loading...</span>
+                </p>
+
                 <div class="connect-button">
                     <a href="https://www.linkedin.com/in/calvin-ssendawula-7874b0236/" target="_blank" class="button">Let's Connect</a>
                 </div>
